WIP: buffer: introduce buffer to send API
- still lot to do and improve